--- a/Rolodoc/Controller/ProfileFieldCell.xib
+++ b/Rolodoc/Controller/ProfileFieldCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileFieldCell" customModule="Rolodoc" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileFieldCell" rowHeight="607" id="KGk-i7-Jjw" customClass="ProfileFieldCell" customModule="Rolodoc" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="607"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileFieldCell" rowHeight="443" id="KGk-i7-Jjw" customClass="ProfileFieldCell" customModule="Rolodoc" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="443"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="606.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="442.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bIH-P9-CcB">
-                        <rect key="frame" x="10" y="10" width="300" height="586.5"/>
+                        <rect key="frame" x="10" y="10" width="300" height="326"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8nX-r0-sjV">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
@@ -59,11 +59,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="Ask a question" translatesAutoresizingMaskIntoConstraints="NO" id="Oz0-gX-V3a">
-                                <rect key="frame" x="10" y="75.5" width="280" height="491"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="150" verticalCompressionResistancePriority="150" text="Ask a question" translatesAutoresizingMaskIntoConstraints="NO" id="Oz0-gX-V3a">
+                                <rect key="frame" x="10" y="76" width="280" height="250"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="FdF-dO-zq3"/>
+                                    <constraint firstAttribute="height" constant="250" id="FdF-dO-zq3"/>
                                 </constraints>
                                 <color key="textColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -73,11 +73,12 @@
                         <constraints>
                             <constraint firstItem="Oz0-gX-V3a" firstAttribute="leading" secondItem="bIH-P9-CcB" secondAttribute="leading" constant="10" id="7oa-RO-9Y5"/>
                             <constraint firstAttribute="trailing" secondItem="Oz0-gX-V3a" secondAttribute="trailing" constant="10" id="P9o-mR-zoV"/>
+                            <constraint firstAttribute="trailing" secondItem="Oz0-gX-V3a" secondAttribute="trailing" constant="10" id="XC6-7K-lkV"/>
                             <constraint firstItem="mCo-fd-ybn" firstAttribute="top" secondItem="8nX-r0-sjV" secondAttribute="bottom" constant="10" id="Z6L-N9-CzJ"/>
-                            <constraint firstAttribute="bottom" secondItem="Oz0-gX-V3a" secondAttribute="bottom" constant="20" id="bBY-RM-0zC"/>
                             <constraint firstAttribute="trailing" secondItem="mCo-fd-ybn" secondAttribute="trailing" constant="10" id="gEM-Nw-8De"/>
                             <constraint firstItem="Oz0-gX-V3a" firstAttribute="top" secondItem="mCo-fd-ybn" secondAttribute="bottom" constant="5" id="gHm-0u-8C7"/>
                             <constraint firstItem="mCo-fd-ybn" firstAttribute="leading" secondItem="bIH-P9-CcB" secondAttribute="leading" constant="10" id="miU-Cs-qJg"/>
+                            <constraint firstItem="Oz0-gX-V3a" firstAttribute="leading" secondItem="bIH-P9-CcB" secondAttribute="leading" constant="10" id="rTb-bN-vAl"/>
                         </constraints>
                     </stackView>
                 </subviews>
@@ -85,7 +86,6 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="bIH-P9-CcB" secondAttribute="trailing" constant="10" id="I5f-mW-cJ7"/>
                     <constraint firstItem="bIH-P9-CcB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="bnk-Nd-7ee"/>
-                    <constraint firstAttribute="bottom" secondItem="bIH-P9-CcB" secondAttribute="bottom" constant="10" id="yoO-20-fMw"/>
                     <constraint firstItem="bIH-P9-CcB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="zZU-9L-4Lt"/>
                 </constraints>
                 <userDefinedRuntimeAttributes>
@@ -105,7 +105,7 @@
                 <outlet property="textField" destination="YlX-yy-Ubf" id="ub8-dT-MyQ"/>
                 <outlet property="titleLabel" destination="yow-ON-5rf" id="eah-In-ADg"/>
             </connections>
-            <point key="canvasLocation" x="129" y="362.5"/>
+            <point key="canvasLocation" x="129" y="280.5"/>
         </tableViewCell>
     </objects>
 </document>
