--- a/Rolodoc/Controller/ProfileFieldCell.xib
+++ b/Rolodoc/Controller/ProfileFieldCell.xib
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bIH-P9-CcB">
-                        <rect key="frame" x="10" y="10" width="300" height="326"/>
+                        <rect key="frame" x="10" y="10" width="300" height="386"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8nX-r0-sjV">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
@@ -69,6 +69,28 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SP5-Ol-pBS">
+                                <rect key="frame" x="0.0" y="336" width="300" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNC-KY-h34" customClass="CheckboxButton" customModule="Rolodoc" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="lIk-UB-cci"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                        <state key="normal" title="  Include puppy giphy 🐶"/>
+                                        <state key="selected" image="checkbox">
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="NNC-KY-h34" firstAttribute="leading" secondItem="SP5-Ol-pBS" secondAttribute="leading" id="PgJ-ry-rXo"/>
+                                    <constraint firstAttribute="trailing" secondItem="NNC-KY-h34" secondAttribute="trailing" id="dST-OM-2Op"/>
+                                    <constraint firstAttribute="bottom" secondItem="NNC-KY-h34" secondAttribute="bottom" id="lpP-C4-TJb"/>
+                                    <constraint firstItem="NNC-KY-h34" firstAttribute="top" secondItem="SP5-Ol-pBS" secondAttribute="top" id="wih-Jr-ehp"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="Oz0-gX-V3a" firstAttribute="leading" secondItem="bIH-P9-CcB" secondAttribute="leading" constant="10" id="7oa-RO-9Y5"/>
@@ -108,4 +130,7 @@
             <point key="canvasLocation" x="129" y="280.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="checkbox" width="25" height="25"/>
+    </resources>
 </document>
