Loader for textpage to imessage generation, makes textpage background all white

--- a/Rolodoc/Controller/ProfileFieldCell.xib
+++ b/Rolodoc/Controller/ProfileFieldCell.xib
@@ -34,8 +34,9 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YlX-yy-Ubf">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YlX-yy-Ubf">
                                                 <rect key="frame" x="51.5" y="0.0" width="228.5" height="30"/>
+                                                <color key="backgroundColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="H7N-nB-1ex"/>
                                                 </constraints>
@@ -61,7 +62,7 @@
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="150" verticalCompressionResistancePriority="150" text="Ask a question" translatesAutoresizingMaskIntoConstraints="NO" id="Oz0-gX-V3a">
                                 <rect key="frame" x="10" y="76" width="280" height="250"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="FdF-dO-zq3"/>
                                 </constraints>
@@ -107,7 +108,6 @@
                         </constraints>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="bIH-P9-CcB" secondAttribute="trailing" constant="10" id="I5f-mW-cJ7"/>
                     <constraint firstItem="bIH-P9-CcB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="bnk-Nd-7ee"/>
